--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,16 +1,28 @@
-<ion-content>
+<ion-header>
+  <ion-navbar>
+    <ion-title end>
+      YouTube4Kids
+    </ion-title>
+  </ion-navbar>
+</ion-header>
+
+
+<ion-content padding>
   <ion-list no-lines>
-    <ion-list-header>
+    <!-- <ion-list-header>
       <ion-item text-wrap>
-        <h1>Welcome to YoutTube 4 Kids App</h1>
+        <h1>Welcome to YoutTube 4 Kids App</h1> 
       </ion-item>
-    </ion-list-header>
-    <ion-title>please choose your option:</ion-title>
+    </ion-list-header> -->
+    <!-- <ion-title>please choose your option:</ion-title> -->
+    <ion-title>אנא בחר מספר סרטונים להצגה</ion-title>
     <ion-item>
-      <ion-label floating>enter number of videos</ion-label>
+      <!-- <ion-label floating>enter number of videos</ion-label> -->
+      <ion-label floating>הכנס מספר סרטונים</ion-label>
       <ion-input type="number" [(ngModel)]="videoNumber"></ion-input>
     </ion-item>
 
+    <!--
     <ion-item>
       <ion-range min="0" max="60" pin="true" [(ngModel)]="time" color="secondary">
         <ion-label range-left>0</ion-label>
@@ -21,9 +33,12 @@
     <ion-item>
       <ion-label>Time</ion-label>
       <ion-datetime displayFormat="mm:ss" [(ngModel)]="time"></ion-datetime>
-    </ion-item>
+    </ion-item> -->
 
-    <button ion-button large full (click)="start()">Let's start!</button>
+    
+    <!-- <button ion-button large block round outline (click)="start()">Let's start!</button> -->
+    <button ion-button large block round outline (click)="start()">בואו נתחיל</button>
+
   </ion-list>
 
 </ion-content>
