--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,7 +23,9 @@
   <!-- <button full ion-button (click)="searchOnYouTube()" [disabled]="query === ''" color="danger">Search</button> -->
   <button block larg round outline ion-button (click)="searchOnYouTube()" [disabled]="query === ''" color="danger">חפש ברשת</button>
 
-  <ion-list text-wrap no-padding>
+  <!-- <ion-title *ngIf="!found"> We did not found any results, please try again!</ion-title> -->
+  <ion-title *ngIf="!found">לא מצאנו כלום, אנא חפש שוב!</ion-title>
+  <ion-list text-wrap no-padding *ngIf="found">
     <button ion-item *ngFor="let list of playlists | async" (click)="playYouTubeVideo(list)">
       <ion-thumbnail item-start>
         <img [src]="list.snippet.thumbnails.default.url">
