custom the app to fit the web platfrom including closing the current tab when the videos is over

--- a/src/pages/player/player.html
+++ b/src/pages/player/player.html
@@ -1,10 +1,15 @@
 <ion-header>
-
+  <ion-navbar>
+    <ion-title>
+      YouTube4Kids
+    </ion-title>
+  </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
 
+  <span *ngIf="isMobile">
     <youtube-player
     height = "50%"
     width = "100%"
@@ -12,6 +17,17 @@
     (ready)="savePlayer($event)"
     (change)="onStateChange($event)"
     ></youtube-player>
+  </span>
+
+    <span id="ytplayer" *ngIf="!isMobile">
+      <youtube-player
+    height = "50%"
+    width = "50%"
+    [videoId]="id"
+    (ready)="savePlayer($event)"
+    (change)="onStateChange($event)"
+    ></youtube-player>
+    </span>
 
     <ion-item padding no-line text-wrap>
       <h1>{{ video.snippet.title }}</h1>
