--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding margin="20px">
+<ion-content padding>
 
   <ion-item padding>
     <!-- <ion-label floating hint="enter">Enter Word</ion-label> -->
