--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -45,7 +45,8 @@
     <ion-item>
       <ion-label>Time</ion-label>
       <ion-datetime displayFormat="h:mm:ss" [(ngModel)]="time"></ion-datetime>
-    </ion-item> -->
+    </ion-item> --
+
     <ion-item>
       <ion-label>דקות</ion-label>
       <ion-datetime displayFormat="mm" [(ngModel)]="minutes"></ion-datetime>
@@ -53,6 +54,19 @@
     <ion-item>
       <ion-label>שעות</ion-label>
       <ion-datetime displayFormat="h" [(ngModel)]="hours"></ion-datetime>
+    </ion-item> -->
+
+     <!-- <ion-title>please choose your option:</ion-title> -->
+     <ion-title>הזן זמן רצוי דקות ושעות</ion-title>
+     <ion-item>
+       <!-- <ion-label floating>enter number of videos</ion-label> -->
+       <ion-label floating>דקות</ion-label>
+       <ion-input type="number" min="0" max="60" [(ngModel)]="minutes"></ion-input>
+     </ion-item>
+     <ion-item>
+      <!-- <ion-label floating>enter number of videos</ion-label> -->
+      <ion-label floating>שעות</ion-label>
+      <ion-input type="number" min="0" max="12" [(ngModel)]="hours"></ion-input>
     </ion-item>
     </div>
 
