--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,16 +25,15 @@
     <ion-input type="text" [(ngModel)]="query"></ion-input>
   </ion-item>
   <!-- <button full ion-button (click)="searchOnYouTube()" [disabled]="query === ''" color="danger">Search</button> -->
-  <button *ngIf="isMobile"
-   block larg round outline ion-button (click)="searchOnYouTube()" [disabled]="query === ''" color="danger">
-   חפש ברשת&nbsp; 
-   <ion-icon name="search"></ion-icon>
+  <button *ngIf="isMobile" block larg round outline ion-button (click)="searchOnYouTube()" [disabled]="query === ''"
+    color="danger">
+    חפש ברשת&nbsp;
+    <ion-icon name="search"></ion-icon>
   </button>
 
-  <button *ngIf="!isMobile"
-   larg round outline ion-button (click)="searchOnYouTube()" [disabled]="query === ''" color="danger">
-   חפש ברשת&nbsp; 
-   <ion-icon name="search"></ion-icon>
+  <button *ngIf="!isMobile" larg round outline ion-button (click)="searchOnYouTube()" [disabled]="query === ''" color="danger">
+    חפש ברשת&nbsp;
+    <ion-icon name="search"></ion-icon>
   </button>
 
   <!-- <ion-title *ngIf="!found"> We did not found any results, please try again!</ion-title> -->
